--- a/package.json
+++ b/package.json
@@ -60,7 +60,13 @@
     ]
   },
   "devDependencies": {
+    "@aws-amplify/backend": "^1.3.0",
+    "@aws-amplify/backend-cli": "^1.2.8",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "aws-cdk": "^2.160.0",
+    "aws-cdk-lib": "^2.160.0",
+    "constructs": "^10.3.0",
+    "esbuild": "^0.24.0",
     "eslint": "^8.12.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.0.0",
@@ -69,7 +75,9 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "prettier": "^3.0.3"
+    "prettier": "^3.0.3",
+    "tsx": "^4.19.1",
+    "typescript": "^5.6.2"
   },
   "homepage": "http://localhost:3000",
   "proxy": "http://localhost:8080"
